http-serivce:  add restart tidbcluster api (#5364)
